# rust_projects

./: .gitignore
aoc2020/day_1/: Cargo.toml
aoc2020/day_1/src/: main  main.rs
aoc2020/day_2/: Cargo.toml
aoc2020/day_2/src/: main  main.rs
aoc2020/day_3/: Cargo.toml
aoc2020/day_3/src/: main.rs
aoc2020/day_4/: Cargo.toml
aoc2020/day_4/src/: main.rs
aoc2020/day_5/: Cargo.toml
aoc2020/day_5/src/: main.rs
aoc2020/day_6/: Cargo.toml
aoc2020/day_6/src/: main.rs
aoc2020/day_7/: Cargo.toml
aoc2020/day_7/src/: main.rs
aoc2020/day_8/: Cargo.toml  test.txt
aoc2020/day_8/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main
web/: .env.example  docker-compose.yml  readme.md
web/rust-backend/: .env.example  Cargo.toml  Dockerfile  rocket.toml.example
web/rust-backend/src/: cors.rs  lib.rs  main.rs  swagger.rs
web/rust-backend/src/DTOs/: login_DTO.rs  mod.rs  new_url_DTO.rs  new_user_DTO.rs  response_DTO.rs  testing_DTO.rs  url_DTO.rs  url_repository.rs  user_DTO.rs  user_repository.rs
web/rust-backend/src/controllers/: account_controller.rs  base_controller.rs  mod.rs  url_controller.rs  user_controller.rs
web/rust-backend/src/data/: diesel_pg.rs  mod.rs  schema.rs  url_repository.rs  user_repository.rs
web/rust-backend/src/data/migrations/2021-07-22-090429_initial_migration/: up.sql
web/rust-backend/src/data/migrations/2021-07-22-125856_urls_migration/: up.sql
web/rust-backend/src/entities/: app_user.rs  mod.rs  url.rs
web/rust-backend/src/helpers/: mapper.rs
web/rust-backend/src/services/: mod.rs  token_service.rs  url_shortener_service.rs
web/rust-frontend/: Cargo.toml  Dockerfile  index.html  style.scss
web/rust-frontend/src/: main.rs  router.rs
web/rust-frontend/src/components/: mod.rs  new_url.rs  url_list.rs  user_list.rs
web/rust-frontend/src/models/: mod.rs  url_model.rs  user.rs
web/rust-frontend/src/pages/: adduser.rs  login.rs  mod.rs  urls.rs
