[package]
name = "rust_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
schemars = { version = "0.8" }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
structmap = "0.1"
hmac = "0.11.0"
jwt = "0.14.0"
sha2 = "0.9.5"
bcrypt = "0.10"
rocket_okapi = { version = "0.7.0-alpha-1", package = "rocket_okapi_fork" }
okapi = { version = "0.6.0-alpha-1", features = ["derive_json_schema"], package = "okapi_fork" }