[package]
name = "rust_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
schemars = { version = "0.8" }
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
structmap = "0.1"
hmac = "0.11.0"
jwt = "0.14.0"
sha2 = "0.9.5"
bcrypt = "0.10"
rocket_okapi = { version = "0.7.0-alpha-1", package = "rocket_okapi_fork" }
okapi = { version = "0.6.0-alpha-1", features = ["derive_json_schema"], package = "okapi_fork" }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
futures = "0.3"
rand = "0.8.4"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]
