[package]
name = "rust_frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
yew-router = "0.15.0"
serde_json = "1.0.64"
log = "0.4.6"
wasm-logger = "0.2.0"
anyhow = "1.0.40"
serde = "1.0.8"
serde_derive = "1.0.8"
jsonwebtokens = "1"